k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  namespace: lincode
  name: postgres-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres

          image: postgres:16

          ports:
            - containerPort: 5432

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - lincode_db

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 6

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
