k8s/ai-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: ai-service

spec:

  selector:
    app: ai

  ports:

  - protocol: TCP

    port: 8001

    targetPort: 8001
