k8s/backend-service.yaml
apiVersion: v1

kind: Service

metadata:
  namespace: lincode
  name: backend-service

spec:

  type: NodePort

  selector:
    app: backend

  ports:

  - protocol: TCP

    port: 8000

    targetPort: 8000

    nodePort: 30080
