k8s/allow-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-backend-ingress
  namespace: default

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 8000
