k8s/backend-to-ai.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  namespace: lincode
  name: backend-to-ai
  namespace: lincode

spec:
  podSelector:
    matchLabels:
      app: ai

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 8001
