k8s/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: lincode

spec:
  podSelector: {}

  policyTypes:
    - Ingress
